--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.23",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
     "swiper": "^11.1.3",
     "tailwind-scrollbar-hide": "^4.0.0"
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/postcss": "^4.1.14",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.6.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
